Samples/magi-compiler-master/src/Compiler/FrontEnd/ConcreteSyntaxTree/Parser/MagiParser.java
// Generated from /Users/liuzhijian/Desktop/Compiler/src/Compiler/FrontEnd/ConcreteSyntaxTree/Parser/Magi.g4 by ANTLR 4.5.1
package Compiler.FrontEnd.ConcreteSyntaxTree.Parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MagiParser extends Parser {
	public static final int
			T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
			T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
			T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
			T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
			T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
			T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52,
			T__52 = 53, IDENTIFIER = 54, INTEGER = 55, STRING = 56, LINECOMMENT = 57, BLOCKCOMMENT = 58,
			WHITESPACE = 59;
	public static final int
			RULE_program = 0, RULE_classDeclaration = 1, RULE_functionDeclaration = 2,
			RULE_variableDeclarationStatement = 3, RULE_statement = 4, RULE_blockStatement = 5,
			RULE_expressionStatement = 6, RULE_selectionStatement = 7, RULE_iterationStatement = 8,
			RULE_jumpStatement = 9, RULE_expression = 10, RULE_type = 11, RULE_constant = 12;
	public static final String[] ruleNames = {
			"program", "classDeclaration", "functionDeclaration", "variableDeclarationStatement",
			"statement", "blockStatement", "expressionStatement", "selectionStatement",
			"iterationStatement", "jumpStatement", "expression", "type", "constant"
	};
	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	public static final ATN _ATN =
			new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	private static final String[] _LITERAL_NAMES = {
			null, "'class'", "'extends'", "'{'", "'}'", "'public'", "'protected'",
			"'private'", "'~'", "'('", "','", "')'", "'='", "';'", "'if'", "'else'",
			"'while'", "'for'", "'continue'", "'break'", "'return'", "'++'", "'--'",
			"'['", "']'", "'.'", "'+'", "'-'", "'!'", "'new'", "'[]'", "'*'", "'/'",
			"'%'", "'<<'", "'>>'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&'",
			"'^'", "'|'", "'&&'", "'||'", "'void'", "'int'", "'bool'", "'string'",
			"'true'", "'false'", "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, "IDENTIFIER", "INTEGER", "STRING",
			"LINECOMMENT", "BLOCKCOMMENT", "WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	static {
		RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
	}

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}

	public MagiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "Magi.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
				setState(29);
						switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
							case 1:
					{
						setState(26);
						classDeclaration();
					}
							break;
							case 2:
					{
						setState(27);
						functionDeclaration();
					}
							break;
							case 3:
					{
						setState(28);
						variableDeclarationStatement();
					}
							break;
				}
				}
					setState(31);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << IDENTIFIER))) != 0));
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(33);
				match(T__0);
				setState(34);
				match(IDENTIFIER);
				setState(37);
				_la = _input.LA(1);
				if (_la == T__1) {
					{
						setState(35);
						match(T__1);
						setState(36);
				match(IDENTIFIER);
				}
				}

				setState(39);
				match(T__2);
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
				setState(42);
						switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
							case 1:
					{
						setState(40);
						functionDeclaration();
					}
							break;
							case 2:
					{
						setState(41);
						variableDeclarationStatement();
					}
							break;
				}
				}
					setState(44);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << IDENTIFIER))) != 0));
				setState(46);
				match(T__3);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(49);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6))) != 0)) {
					{
				setState(48);
				_la = _input.LA(1);
						if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6))) != 0))) {
							_errHandler.recoverInline(this);
						} else {
							consume();
				}
				}
				}

				setState(52);
				_la = _input.LA(1);
				if (_la == T__7) {
					{
						setState(51);
						match(T__7);
				}
				}

				setState(54);
				type(0);
				setState(56);
				_la = _input.LA(1);
				if (_la == IDENTIFIER) {
					{
						setState(55);
						match(IDENTIFIER);
				}
				}

				setState(58);
				match(T__8);
				setState(70);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << IDENTIFIER))) != 0)) {
					{
						setState(59);
						type(0);
						setState(60);
						match(IDENTIFIER);
						setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
						while (_la == T__9) {
					{
					{
						setState(61);
						match(T__9);
						setState(62);
						type(0);
						setState(63);
						match(IDENTIFIER);
					}
					}
							setState(69);
							_errHandler.sync(this);
							_la = _input.LA(1);
				}
				}
				}

				setState(72);
				match(T__10);
				setState(73);
				blockStatement();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final VariableDeclarationStatementContext variableDeclarationStatement() throws RecognitionException {
		VariableDeclarationStatementContext _localctx = new VariableDeclarationStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDeclarationStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(76);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6))) != 0)) {
					{
						setState(75);
				_la = _input.LA(1);
						if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6))) != 0))) {
							_errHandler.recoverInline(this);
						} else {
							consume();
				}
				}
			}

				setState(78);
				type(0);
				setState(79);
				match(IDENTIFIER);
				setState(82);
				_la = _input.LA(1);
				if (_la == T__11) {
					{
						setState(80);
				match(T__11);
						setState(81);
						expression(0);
					}
			}

				setState(84);
				match(T__12);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(92);
			switch (getInterpreter().adaptivePredict(_input, 12, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1);
				{
					setState(86);
					blockStatement();
				}
				break;
				case 2:
					enterOuterAlt(_localctx, 2);
				{
					setState(87);
					expressionStatement();
				}
				break;
				case 3:
					enterOuterAlt(_localctx, 3);
				{
					setState(88);
					selectionStatement();
				}
				break;
				case 4:
					enterOuterAlt(_localctx, 4);
				{
					setState(89);
					iterationStatement();
				}
				break;
				case 5:
					enterOuterAlt(_localctx, 5);
				{
					setState(90);
					jumpStatement();
				}
				break;
				case 6:
					enterOuterAlt(_localctx, 6);
				{
					setState(91);
					variableDeclarationStatement();
				}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final BlockStatementContext blockStatement() throws RecognitionException {
		BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_blockStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(94);
				match(T__2);
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__12) | (1L << T__13) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << IDENTIFIER) | (1L << INTEGER) | (1L << STRING))) != 0)) {
					{
						{
							setState(95);
							statement();
						}
					}
					setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
				setState(101);
				match(T__3);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ExpressionStatementContext expressionStatement() throws RecognitionException {
		ExpressionStatementContext _localctx = new ExpressionStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expressionStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(104);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__20) | (1L << T__21) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << IDENTIFIER) | (1L << INTEGER) | (1L << STRING))) != 0)) {
					{
						setState(103);
						expression(0);
				}
				}

				setState(106);
				match(T__12);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final SelectionStatementContext selectionStatement() throws RecognitionException {
		SelectionStatementContext _localctx = new SelectionStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_selectionStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(108);
				match(T__13);
				setState(109);
				match(T__8);
				setState(110);
				expression(0);
				setState(111);
				match(T__10);
				setState(112);
				statement();
				setState(115);
				switch (getInterpreter().adaptivePredict(_input, 15, _ctx)) {
					case 1: {
						setState(113);
						match(T__14);
						setState(114);
				statement();
				}
					break;
			}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final IterationStatementContext iterationStatement() throws RecognitionException {
		IterationStatementContext _localctx = new IterationStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_iterationStatement);
		int _la;
		try {
			setState(138);
			switch (_input.LA(1)) {
				case T__15:
					_localctx = new WhileStatementContext(_localctx);
					enterOuterAlt(_localctx, 1);
				{
					setState(117);
					match(T__15);
					setState(118);
					match(T__8);
					setState(119);
					expression(0);
					setState(120);
					match(T__10);
					setState(121);
					statement();
				}
				break;
				case T__16:
					_localctx = new ForStatementContext(_localctx);
					enterOuterAlt(_localctx, 2);
				{
					setState(123);
					match(T__16);
					setState(124);
					match(T__8);
					setState(126);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__20) | (1L << T__21) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << IDENTIFIER) | (1L << INTEGER) | (1L << STRING))) != 0)) {
						{
							setState(125);
							expression(0);
					}
					}

					setState(128);
					match(T__12);
					setState(130);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__20) | (1L << T__21) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << IDENTIFIER) | (1L << INTEGER) | (1L << STRING))) != 0)) {
						{
							setState(129);
							expression(0);
					}
					}

					setState(132);
					match(T__12);
					setState(134);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__20) | (1L << T__21) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << IDENTIFIER) | (1L << INTEGER) | (1L << STRING))) != 0)) {
						{
							setState(133);
							expression(0);
					}
					}

					setState(136);
					match(T__10);
					setState(137);
					statement();
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final JumpStatementContext jumpStatement() throws RecognitionException {
		JumpStatementContext _localctx = new JumpStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_jumpStatement);
		int _la;
		try {
			setState(149);
			switch (_input.LA(1)) {
				case T__17:
					_localctx = new ContinueStatementContext(_localctx);
					enterOuterAlt(_localctx, 1);
				{
					setState(140);
					match(T__17);
					setState(141);
					match(T__12);
				}
				break;
				case T__18:
					_localctx = new BreakStatementContext(_localctx);
					enterOuterAlt(_localctx, 2);
				{
					setState(142);
					match(T__18);
					setState(143);
					match(T__12);
				}
				break;
				case T__19:
					_localctx = new ReturnStatementContext(_localctx);
					enterOuterAlt(_localctx, 3);
				{
					setState(144);
					match(T__19);
					setState(146);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__20) | (1L << T__21) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << IDENTIFIER) | (1L << INTEGER) | (1L << STRING))) != 0)) {
						{
							setState(145);
							expression(0);
					}
					}

					setState(148);
					match(T__12);
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(177);
				switch (_input.LA(1)) {
					case T__7:
					case T__20:
					case T__21:
					case T__25:
					case T__26:
					case T__27: {
						_localctx = new UnaryExpressionContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;

						setState(152);
						((UnaryExpressionContext)_localctx).operator = _input.LT(1);
						_la = _input.LA(1);
						if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__20) | (1L << T__21) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0))) {
							((UnaryExpressionContext)_localctx).operator = (Token)_errHandler.recoverInline(this);
						} else {
							consume();
						}
						setState(153);
						expression(13);
					}
					break;
					case T__50:
					case T__51:
					case T__52:
					case INTEGER:
					case STRING: {
						_localctx = new ConstantExpressionContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(154);
						constant();
					}
					break;
					case IDENTIFIER: {
						_localctx = new VariableExpressionContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(155);
						match(IDENTIFIER);
					}
					break;
					case T__8: {
						_localctx = new SubExpressionContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(156);
						match(T__8);
						setState(157);
						expression(0);
						setState(158);
						match(T__10);
					}
					break;
					case T__28: {
						_localctx = new NewExpressionContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(160);
						match(T__28);
						setState(161);
						type(0);
						setState(168);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input, 22, _ctx);
						while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
							if (_alt == 1) {
								{
									{
						setState(162);
										match(T__22);
						setState(163);
						expression(0);
										setState(164);
										match(T__23);
						}
						}
					}
							setState(170);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input, 22, _ctx);
				}
						setState(174);
				_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input, 23, _ctx);
						while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
							if (_alt == 1) {
						{
							{
								setState(171);
								match(T__29);
						}
						}
					}
							setState(176);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input, 23, _ctx);
				}
				}
					break;
					default:
						throw new NoViableAltException(this);
				}
				_ctx.stop = _input.LT(-1);
				setState(237);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 28, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						if (_parseListeners != null) triggerExitRuleEvent();
						_prevctx = _localctx;
						{
							setState(235);
							switch (getInterpreter().adaptivePredict(_input, 27, _ctx)) {
								case 1:
						{
							_localctx = new MultiplicativeExpressionContext(new ExpressionContext(_parentctx, _parentState));
							pushNewRecursionContext(_localctx, _startState, RULE_expression);
							setState(179);
							if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
							setState(180);
							((MultiplicativeExpressionContext)_localctx).operator = _input.LT(1);
							_la = _input.LA(1);
							if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__30) | (1L << T__31) | (1L << T__32))) != 0))) {
								((MultiplicativeExpressionContext)_localctx).operator = (Token)_errHandler.recoverInline(this);
							} else {
								consume();
							}
							setState(181);
							expression(12);
						}
								break;
								case 2:
						{
							_localctx = new AdditiveExpressionContext(new ExpressionContext(_parentctx, _parentState));
							pushNewRecursionContext(_localctx, _startState, RULE_expression);
							setState(182);
							if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
							setState(183);
							((AdditiveExpressionContext)_localctx).operator = _input.LT(1);
							_la = _input.LA(1);
							if (!(_la == T__25 || _la == T__26)) {
								((AdditiveExpressionContext)_localctx).operator = (Token)_errHandler.recoverInline(this);
							} else {
								consume();
						}
							setState(184);
							expression(11);
						}
								break;
								case 3:
						{
							_localctx = new ShiftExpressionContext(new ExpressionContext(_parentctx, _parentState));
							pushNewRecursionContext(_localctx, _startState, RULE_expression);
							setState(185);
							if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
							setState(186);
							((ShiftExpressionContext)_localctx).operator = _input.LT(1);
							_la = _input.LA(1);
							if (!(_la == T__33 || _la == T__34)) {
								((ShiftExpressionContext)_localctx).operator = (Token)_errHandler.recoverInline(this);
							} else {
								consume();
						}
							setState(187);
							expression(10);
						}
								break;
								case 4:
						{
							_localctx = new RelationalExpressionContext(new ExpressionContext(_parentctx, _parentState));
							pushNewRecursionContext(_localctx, _startState, RULE_expression);
							setState(188);
							if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
							setState(189);
							((RelationalExpressionContext)_localctx).operator = _input.LT(1);
							_la = _input.LA(1);
							if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38))) != 0))) {
								((RelationalExpressionContext)_localctx).operator = (Token)_errHandler.recoverInline(this);
							} else {
								consume();
						}
							setState(190);
							expression(9);
						}
								break;
								case 5:
						{
							_localctx = new EqualityExpressionContext(new ExpressionContext(_parentctx, _parentState));
							pushNewRecursionContext(_localctx, _startState, RULE_expression);
							setState(191);
							if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
							setState(192);
							((EqualityExpressionContext)_localctx).operator = _input.LT(1);
							_la = _input.LA(1);
							if (!(_la == T__39 || _la == T__40)) {
								((EqualityExpressionContext)_localctx).operator = (Token)_errHandler.recoverInline(this);
							} else {
								consume();
						}
							setState(193);
							expression(8);
						}
								break;
								case 6: {
									_localctx = new AndExpressionContext(new ExpressionContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_expression);
									setState(194);
									if (!(precpred(_ctx, 6)))
										throw new FailedPredicateException(this, "precpred(_ctx, 6)");
									setState(195);
									match(T__41);
									setState(196);
									expression(7);
								}
								break;
								case 7: {
									_localctx = new ExclusiveOrExpressionContext(new ExpressionContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_expression);
									setState(197);
									if (!(precpred(_ctx, 5)))
										throw new FailedPredicateException(this, "precpred(_ctx, 5)");
									setState(198);
									match(T__42);
									setState(199);
									expression(6);
								}
								break;
								case 8: {
									_localctx = new InclusiveOrExpressionContext(new ExpressionContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_expression);
									setState(200);
									if (!(precpred(_ctx, 4)))
										throw new FailedPredicateException(this, "precpred(_ctx, 4)");
									setState(201);
									match(T__43);
									setState(202);
									expression(5);
								}
								break;
								case 9: {
									_localctx = new LogicalAndExpressionContext(new ExpressionContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_expression);
									setState(203);
									if (!(precpred(_ctx, 3)))
										throw new FailedPredicateException(this, "precpred(_ctx, 3)");
									setState(204);
									match(T__44);
									setState(205);
									expression(4);
								}
								break;
								case 10: {
									_localctx = new LogicalOrExpressionContext(new ExpressionContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_expression);
									setState(206);
									if (!(precpred(_ctx, 2)))
										throw new FailedPredicateException(this, "precpred(_ctx, 2)");
									setState(207);
									match(T__45);
									setState(208);
									expression(3);
								}
								break;
								case 11: {
									_localctx = new AssignmentExpressionContext(new ExpressionContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_expression);
									setState(209);
									if (!(precpred(_ctx, 1)))
										throw new FailedPredicateException(this, "precpred(_ctx, 1)");
									setState(210);
									match(T__11);
									setState(211);
									expression(1);
								}
								break;
								case 12: {
									_localctx = new PostfixExpressionContext(new ExpressionContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_expression);
									setState(212);
									if (!(precpred(_ctx, 17)))
										throw new FailedPredicateException(this, "precpred(_ctx, 17)");
									setState(213);
									((PostfixExpressionContext)_localctx).operator = _input.LT(1);
									_la = _input.LA(1);
									if (!(_la == T__20 || _la == T__21)) {
										((PostfixExpressionContext)_localctx).operator = (Token)_errHandler.recoverInline(this);
						} else {
							consume();
						}
						}
								break;
								case 13: {
									_localctx = new FunctionCallExpressionContext(new ExpressionContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_expression);
									setState(214);
									if (!(precpred(_ctx, 16)))
										throw new FailedPredicateException(this, "precpred(_ctx, 16)");
									setState(215);
									match(T__8);
									setState(224);
									_la = _input.LA(1);
